methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:17: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:23: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:33: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:43: error: not found: value dogHouse
		dogHouse();		
                ^